--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
 
     <developers>
         <developer>
-            <name>Faruk Genç</name>
-            <email>omer@farukgenc.com</email>
-            <url>https://farukgenc.com</url>
+            <name>Phan Nam</name>
+            <email>namp@phannam.com</email>
+            <url>https://phannam.com</url>
         </developer>
     </developers>
 
