--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,16 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.3.RELEASE</version>
+        <version>2.7.4</version>
     </parent>
 
     <groupId>design.boilerplate</groupId>
     <artifactId>spring-boot</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
+
     <name>spring-boot-boilerplate</name>
     <description>
-        Spring Boot Boilerplate is a starter kit. This project includes : Spring Boot(2.3.3), Spring Data JPA, Spring Validation, Spring Security +
+        Spring Boot Boilerplate is a starter kit. This project includes : Spring Boot(2.7.4), Spring Data JPA, Spring Validation, Spring Security +
         JWT Token, PostgreSQL, Mapstruct, Lombok, Swagger
     </description>
 
@@ -27,13 +28,12 @@
     </developers>
 
     <properties>
-        <java.version>1.8</java.version>
-        <jwt.version>0.9.0</jwt.version>
+        <java.version>11</java.version>
+        <jwt.version>4.0.0</jwt.version>
         <lombok.version>1.18.12</lombok.version>
-        <mapstruct.version>1.3.1.Final</mapstruct.version>
-        <apache-commons.version>3.10</apache-commons.version>
-        <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
-        <apache-maven-plugin.version>3.8.1</apache-maven-plugin.version>
+        <mapstruct.version>1.5.2.Final</mapstruct.version>
+        <apache-commons.version>3.12.0</apache-commons.version>
+        <openapi-swagger.version>1.6.11</openapi-swagger.version>
     </properties>
 
     <dependencies>
@@ -64,8 +64,8 @@
         </dependency>
 
         <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
             <version>${jwt.version}</version>
         </dependency>
 
@@ -89,7 +89,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -100,15 +99,9 @@
         </dependency>
 
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>${springfox-swagger2.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>${springfox-swagger2.version}</version>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${openapi-swagger.version}</version>
         </dependency>
 
         <dependency>
