--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.4</version>
+        <version>2.7.10</version>
     </parent>
 
     <groupId>design.boilerplate</groupId>
     <artifactId>spring-boot</artifactId>
-    <version>2.0.0</version>
+    <version>2.1.0</version>
 
     <name>spring-boot-boilerplate</name>
     <description>
@@ -21,7 +21,7 @@
 
     <developers>
         <developer>
-            <name>Faruk Genç</name>
+            <name>Faruk Genc</name>
             <email>omer@farukgenc.com</email>
             <url>https://farukgenc.com</url>
         </developer>
@@ -29,11 +29,10 @@
 
     <properties>
         <java.version>11</java.version>
-        <jwt.version>4.0.0</jwt.version>
-        <lombok.version>1.18.12</lombok.version>
-        <mapstruct.version>1.5.2.Final</mapstruct.version>
+        <jwt.version>4.3.0</jwt.version>
+        <mapstruct.version>1.5.3.Final</mapstruct.version>
         <apache-commons.version>3.12.0</apache-commons.version>
-        <openapi-swagger.version>1.6.11</openapi-swagger.version>
+        <openapi-swagger.version>1.6.15</openapi-swagger.version>
     </properties>
 
     <dependencies>
@@ -55,12 +54,12 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
         <dependency>
@@ -80,6 +79,7 @@
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
