--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=com.springboot.java                
-sonar.projectName=springboot
+sonar.projectName=springboott
 sonar.sources=.
 sonar.java.binaries=./target/classes
