--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,17 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.10</version>
+        <version>3.3.1</version>
     </parent>
 
     <groupId>com.farukgenc</groupId>
     <artifactId>springboot-boilerplate</artifactId>
-    <version>2.2.0</version>
+    <version>3.3.1</version>
 
     <name>spring-boot-boilerplate</name>
     <description>
-        Spring Boot Boilerplate is a starter kit. This project includes : Spring Boot(2.7.4), Spring Data JPA, Spring Validation, Spring Security +
-        JWT Token, PostgreSQL, Mapstruct, Lombok, Swagger
+        Spring Boot Boilerplate is a starter kit.
+        This project includes : Spring Boot(3.3.1), Spring Data JPA, Spring Validation, Spring Security + JWT Token, PostgreSQL, Mapstruct, Lombok, Swagger (Open API)
     </description>
 
     <developers>
@@ -28,12 +28,15 @@
     </developers>
 
     <properties>
-        <java.version>11</java.version>
-        <jwt.version>4.3.0</jwt.version>
-        <apache-commons.version>3.12.0</apache-commons.version>
-        <openapi-swagger.version>1.6.15</openapi-swagger.version>
-        <mapstruct.version>1.5.3.Final</mapstruct.version>
+
+        <java.version>17</java.version>
+        <jwt.version>4.4.0</jwt.version>
+
+        <openapi-swagger.version>2.6.0</openapi-swagger.version>
+
+        <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+
     </properties>
 
     <dependencies>
@@ -99,16 +102,9 @@
             <version>${lombok-mapstruct-binding.version}</version>
         </dependency>
 
-
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>${apache-commons.version}</version>
-        </dependency>
-
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${openapi-swagger.version}</version>
         </dependency>
 
@@ -116,12 +112,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
     </dependencies>
