--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,34 +1,34 @@
+server:
+  http2:
+    enabled: true
+
 spring:
   datasource:
     url: jdbc:postgresql://${POSTGRES_DB_SERVER_ADDRESS:localhost}:${POSTGRES_DB_SERVER_PORT:5432}/
     username: ${POSTGRES_USER:postgres}
     password: ${POSTGRES_PASSWORD:example}
-
+    hikari:
+      pool-name: SpringBootBoilerplateHikariPool
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: create
-      show-sql: true
-      format-sql: true
-      type: info
-      use-sql-comments: true
-      properties:
-        hibernate.use_sql_comments: true
-        hibernate.format_sql: true
+    open-in-view: false
+  jta:
+    enabled: false
 
 springdoc:
   show-actuator: true
-  paths-to-match: /**
-  packages-to-scan: com.farukgenc.boilerplate.springboot
 
 management:
   endpoint:
     health:
       show-details: ALWAYS
-    endpoints:
-      web:
-        exposure:
-          include: "*"
+      probes:
+        enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 
 logging:
   level:
@@ -47,7 +47,7 @@ swagger:
   contact-mail: omer@farukgenc.com
   contact-url: https://farukgenc.com
   app-name: Spring Boot Boilerplate Project
-  app-description: "Spring Boot Boilerplate is a starter kit. This project includes : Spring Boot(2.7.4), Spring Data JPA, Spring Validation, Spring Security + JWT Token, PostgreSQL, Mapstruct, Lombok, Swagger"
-  app-version: 2.0.0
+  app-description: "Spring Boot Boilerplate is a starter kit. This project includes : Spring Boot(3.3.1), Spring Data JPA, Spring Validation, Spring Security + JWT Token, PostgreSQL, Mapstruct, Lombok, Swagger (Open API)"
+  app-version: 3.3.1
   app-license-url: https://www.apache.org/licenses/LICENSE-2.0.html
   app-license: Apache 2.0
