--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres
     restart: always
     ports:
-      - "5432:5432"
+      - "5431:5431"
     environment:
       POSTGRES_PASSWORD: example
     healthcheck:
@@ -16,9 +16,10 @@ services:
 
   app:
     container_name: app
-    image: omerfarukgenc34/spring-boot-boilerplate:3.4.0
+    build: .
     ports:
       - "8080:8080"
+    platform: linux/amd64
     environment:
       - "POSTGRES_DB_SERVER_ADDRESS=db"
       - "POSTGRES_DB_SERVER_PORT=5432"
