--- a/src/main/resources/messages/exception/ExceptionMessages.properties
+++ b/src/main/resources/messages/exception/ExceptionMessages.properties
@@ -1,2 +1,4 @@
 username_already_exists = This username is already being used!
 email_already_exists = This email address is already being used!
+organization_email_exists = This organization email address is already being used!
+organization_name_exists = This name is already being used!
