my update latest

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <developers>
         <developer>
-            <name>Faruk Genc</name>
+            <name>HungPG Genc</name>
             <email>omer@farukgenc.com</email>
             <url>https://farukgenc.com</url>
         </developer>
